--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "biscuit02-hr-support-starter",
-  "version": "0.1.0",
-  "description": "Starter repo for Biscuit02 HR Support (frontend + backend demo)",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
+  "name": "biscuit02-hr-functions",
+  "version": "1.0.0",
+  "engines": {
+    "node": "18"
   },
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "body-parser": "^1.20.2",
-    "jsonwebtoken": "^9.0.0",
-    "node-fetch": "^2.6.7",
-    "csv-parse": "^5.4.0"
+    "firebase-admin": "^11.10.0",
+    "firebase-functions": "^4.4.0",
+    "twilio": "^4.12.0"
   }
 }
