--- a/package.json
+++ b/package.json
@@ -1,13 +1,1 @@
-{
-  "name": "biscuit02-hr-functions",
-  "version": "1.0.0",
-  "engines": {
-    "node": "18"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "firebase-admin": "^11.10.0",
-    "firebase-functions": "^4.4.0",
-    "twilio": "^4.12.0"
-  }
-}
+{ "name": "biscuit02-hr-functions", "version": "1.0.0" }
